--- a/css/style.css
+++ b/css/style.css
@@ -14,5 +14,36 @@ body {
 
 }
 .title_valid{
+
+}
+.title_valid_1{
+
+}
+.text_properties{
+
+}
+.images_section{
+
+}
+.title_images_section{
+
+}
+.specialist_section{
+
+}
+.title_specialist_section{
+
+}
+.list_specialist_section{
+
+}
+.caption_specialist{
+
+}
+.upper_caption{
+
+}
+.lower_caption{
     
 }
+
